fixed form alignment

--- a/etch/etch.css
+++ b/etch/etch.css
@@ -1,44 +1,61 @@
-* {margin: 0; padding: 0; border: ; }
+* {margin: 0; padding: 0;  }
 #grid1  {text-align: center;}
 .boxTp1 {display: inline-block;
          border: 1px solid #eeeeee;} 
 .boxTp1, #grid1, .gridrow {font-size: 0;}
 
 
-.left  {float: left;  }
-.right {float: right; }
+.left  {float:left;  height: 3vw;}
+.right {float:right; height: 3vw;}
 
-section {height: 3vh; margin: 1vh 1%;}
+section {height: 3vh; margin: 1vh 1%; line-height: 3vh;}
 
-input {vertical-align: middle; width: 2vw;}
+input {width: 2vw;}
 
+.shiftup {position: relative; top:-1vh;}
+#colorform {margin: 0 2%;}
 form, input, label 
-    {display: inline-block; font-size: 1.5vh;
+    {display: inline-block; font-size: 2vh;
      white-space: nowrap;}
 
-input[type=number] {width: 15px; margin: 0 1%;
- display: inline-block;}
-input[type=submit] {width: 20px; height: ; 
+
+input[type=number] {width: 20px; margin: 0 1%;
+                    display: inline-block;}
+
+/* Chrome, Safari, Edge, Opera  hide arrows on number input*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox hide arrows on number input*/
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input[type=submit] {width: 30px; height: ; 
                     margin: 0; display: inline-block;}
 
-input[type=text] {min-width: 48px; margin: 0 2%;}
+input[type=text] {min-width: 60px; margin: 2%; margin-top:-10px;}
 
-#lblcolor {width: 2vh; height: 2vh;
-           vertical-align: middle; 
+#lblcolor {width: 3vh; height: 3vh;
            display: inline-block;
            background-color: #ccfcff;
-           border: solid; margin: 0; padding: 0;}
+           border: 1px solid; margin: 0; padding: 0;}
+
+
 input[type=color] {width: 100%; height: 100%; 
            margin: -1px -1px; display: none;}
 
-img {width: 2vh; height: 2vh; margin: 0 2%; 
-     border: 1px solid; vertical-align: middle;
+img {width: 3vh; height: 3vh;
+     border: 1px solid; 
      display: inline-block;}
 
-#gradbtn {width: 2vh; height: 2vh; margin: 0 2% 0 -1% ;
-     border: 1px solid; vertical-align: middle;
+.btn {width: 3vh; height: 3vh; margin: 0 1%;
+     border: 1px solid; 
      display: inline-block;
      background-image: linear-gradient(
                        to right, white , black)}
 
-
+img:hover, #gradbtn:hover, #lblcolor:hover {border: 2px solid black;}
